# qdrant-loader

./: .coderabbit.yaml  .cursorignore  .dockerignore  .env.example  .env.template  .env.test.template  .gitignore  AGENTS.md  CHANGELOG.md  CONFLUENCE_CHUNKING_FIX_PLAN.md  CONTRIBUTING.md  Dockerfile.qdrant-loader  Dockerfile.qdrant-loader-mcp-server  MCP_TOOL_SUGGESTIONS.md  Makefile  README.md  RELEASE_NOTES.md  TESTING_COVERAGE_PLAN.md  TESTS_FAILED.md  TEST_CHANGELOG.md  TEST_SUMMARY.txt  bandit.yml  codecov.yml  config.template.yaml  conftest.py  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  docker.env.example  env.template  generate_changelog.py  manual_bedrock_test.py  pyproject.toml  release.py  requirements-dev.txt  requirements-test.txt  requirements.txt  template_string_fixes_progress.md  test_java_parsing.py  test_qdrant.py  (+1 more)
.beads/: metadata.json
.claude/agents/: ai-developer-guide.md  ai-expert.md  architect.md  backend-dev.md  code-reviewer.md  codebase-analyzer.md  config-auditor.md  debugger.md  devops.md  frontend-dev.md  internal-audit.md  ops.md  orchestrator.md  performance-profiler.md  pm.md  poc.md  product-owner.md  qa.md  release-docs.md  research-architect.md  research-evaluator.md  research-ingestion.md  research-retrieval.md  researcher.md  security-expert.md  solution-architect.md  spike.md  spy.md  tech-writer.md  workflow-guardian.md
.cursor/rules/: 02-testing-guidelines.mdc  ai-expert.mdc  architect.mdc  back-end-dev.mdc  context7-documentation.mdc  developper.mdc  devops-engineer.mdc  devops.mdc  front-end-dev.mdc  product-owner.mdc  project-specifications.mdc  qa.mdc  security-expert.mdc  tech-writer.mdc
.github/workflows/: docs-auto.yml  docs-manual.yml  docs.yml  preview.yml  publish.yml  quality-gates.yml  test.yml
.taskmaster/: config.json  state.json
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  task_021.txt  task_022.txt  task_023.txt  task_024.txt  tasks.json  tasks.json.bak
data/: dump.rdb
docker/: Dockerfile.dev.qdrant-loader  Dockerfile.dev.qdrant-loader-mcp-server  Dockerfile.qdrant-loader  Dockerfile.qdrant-loader-mcp-server  docker-compose.dev.yaml  docker-compose.yaml  pilot_ingest.py
docs/: CLI_COMMANDS.md  CONTRIBUTING.md  ClientUsage.md  CodingStandards.md  ConfluenceDataCenterSupport.md  ConfluencePageHierarchySupport.md  DEVELOPMENT.md  DocumentationAuditList.md  DocumentationUpdates-v0.3.1.md  DocumentationUpdates-v0.3.2.md  ENVIRONMENT_SETUP.md  Features.md  FileConversionGuide.md  IMPROVEMENT_PLAN.md  ITTestsUpdatePlan.md  IncrementalIngestionPlan.md  JiraDataCenterSupport.md  MigrationGuide.md  PRD-graphiti-integration.md  PRD.md  Plan.md  Profiling.md  RELEASE.md  ReleaseNotes.md  TOC.md  TestFixingPlan.md  TestingPlan.md  TestingStrategy.md  performance-improvement-plan.md  semantic_search_improvements.md
docs/analysis/: graphiti-integration-analysis.md  graphiti-integration-example.py
docs/developers/: README.md  api-reference.md  architecture.md  deployment.md  extending.md  sharepoint-config-template.yaml  sharepoint-connector-architecture.md  sharepoint-connector-summary.md  sharepoint-implementation-guide.md  testing.md
docs/getting-started/: README.md  basic-configuration.md  core-concepts.md  installation.md  quick-start.md
docs/improvements/: Chunking_Strategy_Refactoring_Plan.md  Metrics_System_Improvement_Plan.md  Performance_Improvement_Plan.md  Semantic_Search_Enhancement_Roadmap.md  Semantic_Search_LDA_Batching_Optimization_Plan.md  (+3 more)
docs_new/: COMPLETION_SUMMARY.md  CONTRIBUTING.md  DOCUMENTATION_PLAN.md  README.md
qdrant_loader/: git_metadata.py
scripts/: alembic_with_settings.py  benchmark_health_endpoint.py  benchmark_mcp_readiness.py  benchmark_startup.py  fix_linting.py  profile_imports.py
src/: release.py
test-workflow-v2/: test_updated_workflow.sh
tests/: .env.test.template  __init__.py  config.test.template.yaml  config.test.yaml.template  conftest.py  conftest_website.py  test_chunking.py  test_chunking_service.py  test_cleanup.py  test_cli.py  test_config.py  test_embedding_service.py  test_favicon_generation.py  test_ingestion_pipeline.py  test_init_collection.py  test_link_checker.py  test_qdrant_manager.py  test_website_build.py  test_website_build_comprehensive.py  test_website_build_coverage_boost.py  test_website_build_edge_cases.py
website/: README.md  build.py  check_links.py  dev_server.py
(+272 files in other folders)
