[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qdrant-loader"
version = "0.1.0"
description = "A tool for collecting and vectorizing technical content from multiple sources"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
    "qdrant-client>=1.7.0",
    "openai>=1.12.0",
    "tiktoken>=0.5.2",
]
requires-python = ">=3.9"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing" 